--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <center>
-        <h1>📊 HTML Tables Collection</h1>
+        <h1> HTML Tables Collection</h1>
         <hr size="3" color="black">
 
         <table border="3" cellpadding="15" cellspacing="5">
@@ -35,7 +35,8 @@
         </table>
 
         <hr size="2" color="black">
-        <p><b>Click on any link above to view the respective table.</b></p>
+        <p><b>Click on any link above to view each table.</b></p>
     </center>
 </body>
 </html>
+
